Missing return statement in __sync_val_compare_and_swap_8

XMLWordPrintable

    • b75
    • b21
    • other
    • linux

        /builddir/build/BUILD/java-1.7.0-openjdk-1.7.0.171-2.6.13.1.el7.s390/openjdk/hotspot/src/os_cpu/linux_zero/vm/os_linux_zero.cpp: In function 'long long unsigned int __sync_val_compare_and_swap_8(volatile void*, long long unsigned int, long long unsigned int)':
        /builddir/build/BUILD/java-1.7.0-openjdk-1.7.0.171-2.6.13.1.el7.s390/openjdk/hotspot/src/os_cpu/linux_zero/vm/os_linux_zero.cpp:547:3: error: no return statement in function returning non-void [-Werror=return-type]
           }
           ^
        cc1plus: all warnings being treated as errors

              Assignee:
              Aleksey Shipilev
              Reporter:
              Andrew Hughes
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: