8197981: Missing return statement in __sync_val_compare_and_swap_8

Fix issue discovered by -Wreturn-type on systems without LP64.

Reviewed-by: aph