hotspot/src/os_cpu/linux_zero/vm/os_linux_zero.cpp
@@ -504,6 +504,7 @@ extern "C" {
     long long unsigned int oldval,
     long long unsigned int newval) {
     ShouldNotCallThis();
+    return 0;
   }
 };
 #endif // !_LP64
